# jaggpy

./: .gitignore  README.md  pyproject.toml  setup.cfg  test.py
src/jaggpy/: ASPSolver.py  __init__.py  asp_solver.py  bf_solver.py  bruteForceSolver.py  classes.py  parser.py
src/jaggpy/tests/: __init__.py  test_asp.py  test_bf.py
src/jaggpy/tests/files/: scenario1.jagg
src/test/: test.py
src/test/testfiles/: aspCNF.lp  aspLiterals.lp  aspSolver.lp  scenario1.jagg  scenario2.jagg  scenario3.jagg  scenario4.jagg  scenario5.jagg  scenario6.jagg  scenario7.jagg  scenario8.jagg
testfiles/: scenario1.jagg
