[metadata]
name= jaggpy-rdehaan
version = 0.0.1
author = Ronald de Haan, Bo Flachs, Philemon Huising
author_email = me@ronalddehaan.eu
description = A Python package for Judgment Aggregatio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdehaan/jaggpy
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src