[metadata]
name= jaggpy
version = 0.1.1
author = Ronald de Haan, Bo Flachs, Philemon Huising, Daniela Loustalot Knapp
author_email = me@ronalddehaan.eu
description = A Python package for Judgment Aggregation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdehaan/jaggpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4
install_requires=
    nnf>=0.3.0
    pyparsing

[options.packages.find]
where = src

[options.package_data]
* = tests/files/*.jagg
